Updated team names for sauber and rb, and started creating a process for creating positions.yaml via script

--- a/input_files/data_structure.yaml
+++ b/input_files/data_structure.yaml
@@ -22,7 +22,7 @@ team_data:
   mercedes:
     hamilton: {}
     russell: {}
-  alfa:
+  sauber:
     bottas: {}
     zhou: {}
   haas:
@@ -31,6 +31,6 @@ team_data:
   williams:
     albon: {}
     sargenat: {}
-  vcarb:
+  rb:
     riccardo: {}
     tsunoda: {}
