--- a/input_files/inputs.yaml
+++ b/input_files/inputs.yaml
@@ -3,9 +3,7 @@ pop_size: 50
 crossover: 0.8
 mutation: 1
 elitism: 1
-budget: 100
-tournament_size: 45
-completed_races: 1
+tournament_size_prop: 0.9
 race_week_num: 2
 max_drivers: 5
 max_constructors: 2
