removed the availability related code

--- a/input_files/positions.yaml
+++ b/input_files/positions.yaml
@@ -11,7 +11,7 @@ current_week:
     perez: 1
   ferrari:
     leclerc: 4
-    bearman: 3
+    sainz: 3
   aston_martin:
     alonzo: 9
     stroll: 10
