updated the requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+blinker==1.8.2
 cattrs==23.2.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -13,6 +14,7 @@ email_validator==2.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
 fastf1==3.3.9
+Flask==3.0.3
 fonttools==4.48.1
 h11==0.14.0
 httpcore==1.0.5
@@ -67,3 +69,4 @@ urllib3==2.2.1
 uvicorn==0.30.1
 watchfiles==0.22.0
 websockets==12.0
+Werkzeug==3.0.3
