full-scale pipeline cleanup and streamlining

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-venv/*
-Plots/*
-__pycache__/*
-*/__pycache__/*
-*/*/__pycache__/*
-downlink_files/*
+venv/
+Plots/
+__pycache__/
+downlink_files/
 local_*.*
-*cache*/*
-*/*cache*/*
-*/*/*cache*/*
 node_modules
-mongo_data/*
-local_*/*
+mongo_data/
+local_*/
