--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+alabaster==1.0.0
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+babel==2.16.0
 blinker==1.8.2
 cattrs==23.2.3
 certifi==2024.2.2
@@ -10,17 +12,20 @@ colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
 dnspython==2.6.1
+docutils==0.21.2
 email_validator==2.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
 fastf1==3.3.9
 Flask==3.0.3
+Flask-Cors==4.0.1
 fonttools==4.48.1
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.6
+imagesize==1.4.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -57,6 +62,14 @@ scipy==1.14.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
+Sphinx==8.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 starlette==0.37.2
 thefuzz==0.22.1
 timple==0.1.8
