--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,25 @@
-alabaster==1.0.0
 annotated-types==0.7.0
 anyio==4.4.0
-attrs==23.2.0
-babel==2.16.0
-blinker==1.8.2
-cattrs==23.2.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-contourpy==1.2.0
+contourpy==1.2.1
 cycler==0.12.1
-dnspython==2.6.1
-docutils==0.21.2
-email_validator==2.2.0
-fastapi==0.111.0
-fastapi-cli==0.0.4
-fastf1==3.3.9
-Flask==3.0.3
-Flask-Cors==4.0.1
-fonttools==4.48.1
+fastapi==0.112.2
+fonttools==4.53.1
 h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==3.6
-imagesize==1.4.1
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
+idna==3.8
 kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.2
-mdurl==0.1.2
-numpy==1.26.4
-orjson==3.10.5
-packaging==23.2
-pandas==2.2.2
-pillow==10.2.0
-platformdirs==4.2.2
-pluggy==1.5.0
-pydantic==2.7.4
-pydantic-extra-types==2.8.2
-pydantic-settings==2.3.3
-pydantic_core==2.18.4
-Pygments==2.18.0
-pymongo==4.7.3
-pyparsing==3.1.1
-pytest==8.2.2
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-rapidfuzz==3.9.4
-requests==2.31.0
-requests-cache==1.2.1
-rich==13.7.1
-scipy==1.14.0
-shellingham==1.5.4
+matplotlib==3.9.2
+numpy==2.1.0
+packaging==24.1
+pillow==10.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pyparsing==3.1.3
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
 six==1.16.0
 sniffio==1.3.1
-snowballstemmer==2.2.0
-Sphinx==8.0.2
-sphinxcontrib-applehelp==2.0.0
-sphinxcontrib-devhelp==2.0.0
-sphinxcontrib-htmlhelp==2.1.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==2.0.0
-sphinxcontrib-serializinghtml==2.0.0
-starlette==0.37.2
-thefuzz==0.22.1
-timple==0.1.8
-typer==0.12.3
+starlette==0.38.2
 typing_extensions==4.12.2
-tzdata==2024.1
-ujson==5.10.0
-url-normalize==1.4.3
-urllib3==2.2.1
-uvicorn==0.30.1
-watchfiles==0.22.0
-websockets==12.0
-Werkzeug==3.0.3
+uvicorn==0.30.6
