--- a/f1_fantasy_ui/package.json
+++ b/f1_fantasy_ui/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-router": "^4.4.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
