--- a/f1_fantasy_ui/package.json
+++ b/f1_fantasy_ui/package.json
@@ -11,8 +11,10 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.1",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.4.3",
     "webfontloader": "^1.0.0"
   },
