--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,15 @@
 annotated-types==0.7.0
 anyio==4.4.0
+attrs==24.2.0
+cattrs==24.1.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
 fastapi==0.112.2
+fastf1==3.4.0
 fonttools==4.53.1
 h11==0.14.0
 idna==3.8
@@ -12,14 +17,26 @@ kiwisolver==1.4.5
 matplotlib==3.9.2
 numpy==2.1.0
 packaging==24.1
+pandas==2.2.2
 pillow==10.4.0
+platformdirs==4.3.3
 pydantic==2.8.2
 pydantic_core==2.20.1
 pyparsing==3.1.3
 python-dateutil==2.9.0.post0
+pytz==2024.2
 PyYAML==6.0.2
+rapidfuzz==3.9.7
+requests==2.32.3
+requests-cache==1.2.1
+scipy==1.14.1
 six==1.16.0
 sniffio==1.3.1
 starlette==0.38.2
+timple==0.1.8
 typing_extensions==4.12.2
+tzdata==2024.1
+url-normalize==1.4.3
+urllib3==2.2.3
 uvicorn==0.30.6
+websockets==13.0.1
